--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "destination-wizard",
   "version": "2.1.3",
-  "description": "A simple npm package that recommends travel destinations along with local food and drink options based on the specified country and city.",
+  "description": "A simple npm package that recommends travel destinations along with local food and drink options based on the specified country.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
